# fastapi-auth

./: .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_create_users_table.py
app/: auth.py  main.py  models.py  users.py
tests/: conftest.py  test_me.py  test_register.py  test_token.py
