[project]
name = "fastapi-auth"
version = "0.1.0"
description = "FastAPI OAuth2 auth example"
authors = [{ name = "Andrea Grandi" }]
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "python-dotenv",
    "alembic",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
